--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 .conteiner {
-	width: 1200px;
+	width: 1170px;
 	padding-left: 15px;
 	padding-right: 15px;
 	margin-left: auto;
@@ -29,7 +29,7 @@ h2 {
 	line-height: 1.29em;
 	letter-spacing: 0.03em;
 	color: #000000;
-	margin-right: 94px;
+	margin: 24px 94px 25px 0px;
 }
 
 .words {
@@ -194,13 +194,15 @@ img {
 	letter-spacing: 0.03em;
 	text-transform: uppercase;
 	color: #212121;
+	margin-bottom: 10px;
+}
+
+h3 {
+	margin: 0;
 }
 
 .tatle-item {
-	margin-top: 0px;
-	margin-bottom: 0px;
-	padding-top: 27px;
-	padding-bottom: 27px;
+	margin: 0px 0px 20px 0px;
 	font-weight: 700;
 	font-size: 14px;
 	line-height: 0.67em;
@@ -211,6 +213,11 @@ img {
 	background: rgba(47, 48, 58, 0.8);
 	width: 370px;
 }
+
+p {
+	margin: 0px 0px 0px 0px;
+}
+
 .page-title {
 	width: 696px;
 }
@@ -259,7 +266,6 @@ img {
 	width: calc((100% - 30px * 3) / 4);
 	margin-right: 30px;
 	width: 270px;
-	height: 368px;
 	background: #ffffff;
 	border-radius: 0px 0px 4px 4px;
 	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -269,12 +275,21 @@ img {
 	margin-right: 0px;
 }
 
+.team-photo {
+	margin-bottom: 30px;
+}
+
+.team-title {
+	height: 19px;
+}
+
 .team-position {
 	font-size: 16px;
 	line-height: 0.79em;
 	text-align: center;
 	letter-spacing: 0.03em;
 	color: #757575;
+	margin-bottom: 16px;
 }
 
 li.icon-list {
@@ -313,7 +328,7 @@ li.icon-list {
 	line-height: 1.29em;
 	letter-spacing: 0.03em;
 	color: #ffffff;
-	margin-right: 0px;
+	margin: 0px 0px 20px 0px;
 }
 
 .footer-address {
@@ -381,8 +396,8 @@ p.tatle-item {
 }
 
 .section-portfolio {
-	margin-top: 94px;
-	margin-bottom: 94px;
+	padding-top: 94px;
+	padding-bottom: 94px;
 }
 
 .title-portfolio {
