--- a/css/style.css
+++ b/css/style.css
@@ -329,6 +329,12 @@ li.icon-list {
 	padding: 12px;
 }
 
+.social-icon {
+	display: flex;
+	width: 20px;
+	height: 20px;
+}
+
 .footer {
 	background-color: #2f303a;
 	padding-top: 60px;
