--- a/css/style.css
+++ b/css/style.css
@@ -326,7 +326,14 @@ li.icon-list {
 
 .icon {
 	display: block;
-	padding: 12px;
+    padding-top: 12px;
+    padding-right: 12px;
+    padding-left: 12px;
+    padding-bottom: 12px;
+    color: var(--grey-border-color-partners);
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
 }
 
 .social-icon {
