--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,16 @@
 /*font-family: 'Raleway', sans-serif;
 font-family: 'Roboto', sans-serif; */
 
+html {
+	box-sizing: border-box;
+  }
+  
+  *,
+  *::before,
+  *::after {
+	box-sizing: inherit;
+  }
+
 body {
 	font-family: Roboto;
 	font-size: 14px;
@@ -10,7 +20,7 @@ body {
 }
 
 .conteiner {
-	width: 1170px;
+	width: 1200px;
 	padding-left: 15px;
 	padding-right: 15px;
 	margin-left: auto;
@@ -312,15 +322,7 @@ p {
 	margin-bottom: 16px;
 }
 
-li.icon-list {
-	margin-left: auto;
-	margin-right: auto;
-}
-
 .icon-list:not(:last-child) {
-	display: block;
-	text-align: center;
-	width: 44px;
 	margin-right: 10px;
 }
 
@@ -337,9 +339,17 @@ li.icon-list {
 }
 
 .social-icon {
+	fill: currentColor;
 	display: flex;
 	width: 20px;
 	height: 20px;
+}
+
+.social-media {
+	display: flex;
+    justify-content: center;
+	width: 270;
+	height: 44;
 }
 
 .footer {
